--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -1,6 +1,10 @@
 :root {
     --header-height: 60px;
     --container-max-width: 1024px;
+
+    @media screen and (max-width: 767px) {
+        --container-max-width: unset;
+    }
 }
 
 * {
